--- a/app/src/main/res/layout/fragment_exchange_fragment.xml
+++ b/app/src/main/res/layout/fragment_exchange_fragment.xml
@@ -8,45 +8,36 @@
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refresh"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layout_constraintVertical_weight="2.5"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/textView"
         app:layout_constraintEnd_toEndOf="parent">
 
         <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:scrollbars="none">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
 
-                <TextView
-                    android:id="@+id/view"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:textColor="@color/text_color"
-                    android:background="@color/bg_color"
-                    android:gravity="center"
-                    android:text="@string/refresh"
-                    android:visibility="invisible"
-                    app:layout_constraintTop_toTopOf="parent"/>
-
                 <ImageView
                     android:id="@+id/imageView1"
                     style="@style/ImageViewStyle"
                     android:contentDescription="@string/app_name"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/view" />
+                    app:layout_constraintHorizontal_weight="1.2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/countryText1"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/countryText1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="50dp"
-                    android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:gravity="top"
@@ -57,12 +48,14 @@
                     android:textColor="@color/text_color"
                     android:textSize="20sp"
                     app:drawableEndCompat="@drawable/ic_chevron_right_48px"
+                    app:layout_constraintHorizontal_weight="5.8"
                     app:layout_constraintStart_toEndOf="@id/imageView1"
-                    app:layout_constraintTop_toBottomOf="@id/view"/>
+                    app:layout_constraintEnd_toStartOf="@id/amountText1"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <TextView
                     android:id="@+id/amountText1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="15dp"
@@ -76,22 +69,24 @@
                     android:text="@string/amount"
                     android:textColor="@color/text_color"
                     android:textSize="30sp"
-                    app:layout_constraintLeft_toRightOf="@id/countryText1"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/view" />
+                    app:layout_constraintHorizontal_weight="3"
+                    app:layout_constraintStart_toEndOf="@id/countryText1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/imageView2"
                     style="@style/ImageViewStyle"
                     android:contentDescription="@string/app_name"
-                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintHorizontal_weight="1.2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/countryText2"
                     app:layout_constraintTop_toBottomOf="@id/imageView1" />
 
                 <TextView
                     android:id="@+id/countryText2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="50dp"
-                    android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:gravity="top"
@@ -104,12 +99,14 @@
                     android:textColor="@color/text_color"
                     android:textSize="20sp"
                     app:drawableEndCompat="@drawable/ic_chevron_right_48px"
+                    app:layout_constraintHorizontal_weight="5.8"
                     app:layout_constraintStart_toEndOf="@id/imageView2"
+                    app:layout_constraintEnd_toStartOf="@id/amountText2"
                     app:layout_constraintTop_toBottomOf="@id/countryText1" />
 
                 <TextView
                     android:id="@+id/amountText2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="15dp"
@@ -117,7 +114,6 @@
                     android:autoSizeTextType="uniform"
                     android:gravity="center_vertical|end"
                     android:maxWidth="120dp"
-                    android:maxLength="13"
                     android:maxLines="1"
 
                     android:minWidth="120dp"
@@ -125,16 +121,10 @@
                     android:text="@string/amount"
                     android:textColor="@color/text_color"
                     android:textSize="30sp"
-                    app:layout_constraintLeft_toRightOf="@id/countryText2"
-                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintHorizontal_weight="3"
+                    app:layout_constraintStart_toEndOf="@id/countryText2"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/amountText1" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="10dp"
-                    app:layout_constraintTop_toBottomOf="@id/countryText2"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -144,27 +134,31 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:gravity="center"
         android:text="@string/data_provider"
         android:textColor="@color/description_text_color"
         app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintVertical_weight="0.5"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/refresh"
         app:layout_constraintBottom_toTopOf="@id/layout"/>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintVertical_weight="7"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
 
         <include
             layout="@layout/content_main" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
