--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Default colors used in the app -->
-    <color name="purple_500">#FF6200EE</color>
     <color name="black">#FF000000</color>
-    <color name="cyanA100">#18FFFF</color>
+
+    <!--<color name="cyanA100">#18FFFF</color>-->
+    <color name="cyanA100">#0097A7</color>
     <color name="blue_50">#E3F2FD</color>
     <color name="grey_100">#F5F5F5</color>
     <color name="grey_900">#212121</color>
